@@ -1,1 +1,2 @@
 MMX-OBJS-$(CONFIG_YADIF_FILTER)              += x86/yadif.o
+MMX-OBJS-$(CONFIG_GRADFUN_FILTER)            += x86/gradfun.o
